--- a/src/main/resources/templates/record.html
+++ b/src/main/resources/templates/record.html
@@ -63,10 +63,10 @@
     </thead>
     <tbody>
         <tr th:each="student : ${student}">
-            <td th:text="${student.id}">1</td>
-            <td th:text="${student.name}">John</td>
-            <td th:text="${student.sub}">Math</td>
-            <td th:text="${student.father}">Mr. Smith</td>
+            <td th:text="${student.id}"></td>
+            <td th:text="${student.name}"></td>
+            <td th:text="${student.sub}"></td>
+            <td th:text="${student.father}"></td>
         </tr>
     </tbody>
 </table>
